kubernetes/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taller-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: taller.local
    http:
      paths:
      # Estas 3 rutas "engañan" al navegador y lo mandan al frontend
      - path: /noticias
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /usuarios
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /talleres
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      # Ruta para la API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
      # Ruta raíz para la web
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
